# telegram.authorization

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  show_db.py
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
app/: main.py
app/core/: auth.py  database.py  models.py  settings.py  viewsets.py
app/core/encryption/: crypto.py
app/domains/bot/: meta.py  models.py  schemas.py  views.py
app/domains/bot/services/: bot_service.py
app/domains/link/: meta.py  models.py  schemas.py  views.py
app/domains/link/orm/: get_links.py
app/domains/project/: meta.py  models.py  schemas.py  views.py
app/domains/telegram/: bot_cache.py  bot_manager.py  event_handler.py  messages.py  polling_manager.py  views.py  webhook_manager.py
migrations/models/: 0_20250709161227_init.py  0_20250717174440_init.py
